@@ -211,6 +211,7 @@ SCIP_RETCODE SCIPdebugIncludeProp(
 /** adds a solution value for a new variable in the transformed problem that has no original counterpart
  * a value can only be set if no value has been set for this variable before
  */
+SCIP_EXPORT
 SCIP_RETCODE SCIPdebugAddSolVal(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_VAR*             var,                /**< variable for which to add a value */
@@ -218,6 +219,7 @@ SCIP_RETCODE SCIPdebugAddSolVal(
    );
 
 /** gets pointer to the debug solution */
+SCIP_EXPORT
 SCIP_RETCODE SCIPdebugGetSol(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_SOL**            sol                 /**< buffer to store pointer to the debug solution */
@@ -227,6 +229,7 @@ SCIP_RETCODE SCIPdebugGetSol(
  *
  * if no value is stored for the variable, gives 0.0
  */
+SCIP_EXPORT
 SCIP_RETCODE SCIPdebugGetSolVal(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_VAR*             var,                /**< variable for which to get the value */
@@ -234,6 +237,7 @@ SCIP_RETCODE SCIPdebugGetSolVal(
    );
 
 /** check whether the debugging solution is valid in the current node */
+SCIP_EXPORT
 SCIP_RETCODE SCIPdebugSolIsValidInSubtree(
    SCIP*                 scip,               /**< SCIP data structure */
    SCIP_Bool*            isvalidinsubtree    /**< pointer to store whether the solution is valid in the current
@@ -242,26 +246,31 @@ SCIP_RETCODE SCIPdebugSolIsValidInSubtree(
    );
 
 /** checks whether SCIP data structure is the main SCIP (the one for which debugging is enabled) */
+SCIP_EXPORT
 SCIP_Bool SCIPdebugIsMainscip(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
 /** enabling solution debugging mechanism */
+SCIP_EXPORT
 void SCIPdebugSolEnable(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
 /** disabling solution debugging mechanism */
+SCIP_EXPORT
 void SCIPdebugSolDisable(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
 /** check if solution debugging mechanism is enabled */
+SCIP_EXPORT
 SCIP_Bool SCIPdebugSolIsEnabled(
    SCIP*                 scip                /**< SCIP data structure */
    );
 
 /** check if SCIP is compiled with WITH_DEBUG_SOLUTION */
+SCIP_EXPORT
 SCIP_Bool SCIPwithDebugSol(void);
 
 #else
